# agents-assignment-1

./: .env.example  .gitignore  FEEDBACK_assignment-1_attempt-1.md  FEEDBACK_assignment-1_attempt-2.md  README.md  crew.py  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: grade.yml
agents/: __init__.py  query_expander.py  report_writer.py  source_hunter.py  synthesizer.py
config/: __init__.py  chunking.py  settings.py
data/evals/: test_queries.json
data/papers/: paper_index.json
evals/: __init__.py  report_generator.py  retrieval_metrics.py  run_evals.py
outputs/: report_How_do_multi-agent_systems_coo_20260627_061022.md  report_What_are_the_main_approaches_t_20260627_063757.md
scripts/: download_papers.py  setup_vectorstore.py  verify_setup.py
tasks/: __init__.py  task_definitions.py
tools/: __init__.py  chunker.py  embeddings.py  paper_rag_tool.py  pdf_processor.py
