[project]
name = "research-crew-starter"
version = "0.1.0"
description = "Multi-agent Research & Report Crew for UCLA Agentic AI course"
requires-python = ">=3.11"

dependencies = [
  "crewai>=0.28.0",
  "crewai-tools>=0.1.0",
  "chromadb>=0.4.0",
  "pymupdf>=1.23.0",
  "openai>=1.0.0",
  "tiktoken>=0.5.0",
  "google-generativeai>=0.3.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "rich>=13.0.0",
  "typer>=0.9.0",
  "tqdm>=4.66.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]
